stadiums 등록 기능 구현

--- a/views/stadiums-save.pug
+++ b/views/stadiums-save.pug
@@ -16,7 +16,9 @@ block content
                         input#location.form-control(type="text" required name="location" placeholder="주소를 입력하세요")
                 .mt-4
                     <a href="/" class="btn btn-secondary">취소</a>
-                    <button class="btn btn-primary">등록</button>                    
+                    <button class="btn btn-primary" id="btn-save">등록</button>                    
             .col-2          
             
         .col-md-3
+
+    script(src="/javascripts/stadiums.js") 
